fix: fixed the carbon image on smaller devices

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -54,7 +54,7 @@ main {
     justify-content: center;
     img {
       width: 90%;
-      margin: 0px;
+      height: auto;
     }
   }
 }
